--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "sweetalert2": "^11.14.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
