--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@mui/styled-engine-sc": "^6.1.6",
     "@mui/x-charts": "^7.22.1",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.23.8"
@@ -47,5 +49,9 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   }
 }
