--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.4",
     "tailwind-scrollbar-hide": "^1.1.7",
